--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
       </div>
 
       <form action="" class="search-bar js-form search">
-        <input type="search" name="search" pattern=".*\S.*" required>
+        <input autocomplete="off" type="search" name="search" pattern=".*\S.*" required>
         <button class="search-btn" type="submit">
           <span>Search</span>
         </button>
